<?xml version="1.0"?>
<package>
  <name>hydrus_object_transportation</name>
  <version>0.1.0</version>
  <description>hydrus_object_transportation</description>
  <maintainer email="anzai@jsk.imi.i.u-tokyo.ac.jp">Tomoki Anzai</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aerial_robot_base</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hydrus_transform_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jsk_mbzirc_board</build_depend>
  <run_depend>aerial_robot_base</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hydrus_transform_control</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>jsk_mbzirc_board</run_depend>
  <export>
  </export>
</package>
