<?xml version="1.0"?>
<package format="2">
  <name>squeeze_navigation</name>
  <version>1.0.0</version>
  <description>The squeeze_navigation package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>aerial_motion_planning_msgs</depend>
  <depend>bspline_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>dragon</depend>
  <depend>sampling_based_method</depend>
  <depend>differential_kinematics</depend>
  <depend>pluginlib</depend>
  <depend>moveit_msgs</depend>


  <export>
    <squeeze_navigation plugin="${prefix}/planner_plugins.xml" />
  </export>

</package>
