<?xml version="1.0"?>
<package format="2">
  <name>aerial_motion_planning_msgs</name>
  <version>1.0.0</version>
  <description>The aerial_motion_planning_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>

  <license>BSD</license>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>bspline_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>dragon</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_export_depend>bspline_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>bspline_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>aerial_robot_model</exec_depend>
  <exec_depend>dragon</exec_depend>

</package>
